# eda_and_devs

./: .gitignore  README.md  README_ru.md  pipeline.ipynb  pyproject.toml
app/: Dockerfile  dashboard.py  dashboard.yaml  requirements.txt
data/: dashboard.html  df_eda.pickle
