[tool.poetry]
name = "eda-and-devs"
version = "0.1.0"
description = ""
authors = ["maxlethal <67437106+maxlethal@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "eda_and_devs"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
